# mcbuild-generator

./: .gitignore  README.md  pyproject.toml
conf/: extraction.yaml  parameters.yaml  processing.yaml
data/01_raw/: metadata.csv
data/09_external/: all_blocks.json
data/example/: build_batch_352_9133_6.schem
notebooks/: data_analysis.ipynb  kaggle_helper.ipynb  kaggle_run.ipynb  vae_training.ipynb  write_relevant_blocks.ipynb
src/block_embedding/: schem2vec.py
src/block_embedding/utils/: schem_utils.py
src/mcbuild_generator/: pipeline.py
src/mcbuild_generator/constants/: paths.py
src/mcbuild_generator/extraction/: extract_builds_data.py  extract_filepaths.py  extract_metadata.py  pipeline.py
src/mcbuild_generator/processing/: clean_data.py  count_used_blocks.py  filter_blocks.py  filter_builds.py  index_block.py  pipeline.py  schem.py  transform_data.py
src/mcbuild_generator/processing/utils/: schem_utils.py
src/mcbuild_generator/training/: dataset.py  pipeline.py
src/mcbuild_generator/training/vae/: train.py  vae.py  vae_loss.py
src/mcbuild_generator/utils/: args.py  fs_io.py  plots.py
src/mcbuild_generator/validation/: create_schematic.py  generate_builds.py  pipeline.py  reconstruct_builds.py
test/block_embedding/: test_schem2vec.py
test/extraction/: conftest.py  test_extraction_pipeline.py
test/processing/: conftest.py  test_processing_pipeline.py  test_schem.py  test_schem2vec.py
