[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcbuildgen-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbtlib>=2.0.4",
    "numpy>=2.4.3",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
