[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcbuild_generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbtlib>=2.0.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
